Added auth to the nav

--- a/src/app/components/user-sub/user-sub.component.html
+++ b/src/app/components/user-sub/user-sub.component.html
@@ -1,22 +1,89 @@
-<article>
-<div class="gl">
-    <img class="fl-img" src="/assets/img/icons/user.svg" alt="">
+<div class="container">
+  <article>
+    <div class="gl">
+      <span class="cancel" (click)="close()">
+        <svg
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M15.9991 16L8 8M8.00085 16L16 8"
+            stroke="#141B34"
+            stroke-width="1.5"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22C17.5228 22 22 17.5228 22 12Z"
+            stroke="#141B34"
+            stroke-width="1.5"
+            stroke-linejoin="round"
+          />
+        </svg>
+      </span>
 
-    <span>
-        <h3>samuel isah</h3>
-        <p class="mail">sireroyce1@gmail.com</p>
-    </span>
+      <div>
+        <div *ngIf="!userImg; else usersImg">
+          <svg
+            class="user__svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M12 2C17.5237 2 22 6.47778 22 12C22 17.5222 17.5237 22 12 22"
+              stroke="#000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M9 21.5C7.81163 21.0953 6.69532 20.5107 5.72302 19.7462M5.72302 4.25385C6.69532 3.50059 7.81163 2.90473 9 2.5M2 10.2461C2.21607 9.08813 2.66019 7.96386 3.29638 6.94078M2 13.7539C2.21607 14.9119 2.66019 16.0361 3.29638 17.0592"
+              stroke="#000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+            <path
+              d="M8 16.5C10.0726 14.302 13.9051 14.1986 16 16.5M14.2179 9.75C14.2179 10.9926 13.2215 12 11.9925 12C10.7634 12 9.76708 10.9926 9.76708 9.75C9.76708 8.50736 10.7634 7.5 11.9925 7.5C13.2215 7.5 14.2179 8.50736 14.2179 9.75Z"
+              stroke="#000"
+              stroke-width="1.5"
+              stroke-linecap="round"
+            />
+          </svg>
+        </div>
+        <ng-template #usersImg>
+          <img class="fl-img" [src]="userImg" [alt]="userName" />
+        </ng-template>
+      </div>
+
+      <span>
+        <ng-container *ngIf="!userName; else userNameTemplate">
+          <h3>User</h3>
+        </ng-container>
+        <ng-template #userNameTemplate>
+          <div>
+            <h3>{{ userName }}</h3>
+          </div>
+        </ng-template>
+        <p class="mail">{{ userEmail }}</p>
+      </span>
+    </div>
+    <div class="fl">
+      <img class="icon" src="./assets/img/icons/range-setting.svg" alt="" />
+      <p>Account</p>
+    </div>
+    <div class="fl">
+      <img class="icon" src="./assets/img/icons/heart-outline.svg" alt="" />
+      <p>Favorites</p>
+    </div>
+    <div class="fl" (click)="logout()">
+      <img class="icon" src="./assets/img/icons/log-out.svg" alt="" />
+      <p>Sign out</p>
+    </div>
+  </article>
 </div>
-<div class="fl">
-    <img class="icon" src="./assets/img/icons/range-setting.svg" alt="">
-    <p>Account</p>
-</div>
-<div class="fl">
-    <img class="icon" src="./assets/img/icons/heart-outline.svg" alt="">
-    <p>Favorites</p>
-</div>
-<div class="fl">
-    <img class="icon" src="./assets/img/icons/log-out.svg" alt="">
-    <p>Sign out</p>
-</div>
-</article>
