--- a/src/app/components/user-sub/user-sub.component.css
+++ b/src/app/components/user-sub/user-sub.component.css
@@ -32,9 +32,7 @@ article {
 }
 
 .fl-img {
-  height: 2rem;
-  background: var(--color-white);
-  padding: 4px;
+  height: 3rem;
   border-radius: 50px;
   border: 1px solid transparent;
   cursor: pointer;
@@ -43,7 +41,6 @@ article {
 
 .icon {
   height: 1.4rem;
-  /* background: var(--color-white); */
   padding: 4px;
   border-radius: 50px;
   border: 1px solid transparent;
@@ -53,6 +50,7 @@ article {
 
 .mail {
   text-transform: lowercase;
+  font-size: 13px;
 }
 
 .fl p {
@@ -63,4 +61,17 @@ article {
 
 h3 {
   margin: 0;
+}
+
+.user__svg {
+  height: auto;
+  width: 2.3rem;
+}
+
+
+.cancel {
+  position: absolute;
+  right: 15px;
+  top: 6px;
+  cursor: pointer;
 }
