--- a/src/app/pages/brand-page/brand-page.component.html
+++ b/src/app/pages/brand-page/brand-page.component.html
@@ -9,7 +9,7 @@
     <brand-cars [cars]="brand?.cars"></brand-cars>
   </div>
   <div class="flex__center btn__box">
-    <button class="CTA">Book a brand</button>
+    <button class="CTA">Book a {{brand?.brandName}}</button>
   </div>
 </section>
 
