--- a/src/app/newnav/newnav.component.css
+++ b/src/app/newnav/newnav.component.css
@@ -134,6 +134,17 @@
   height: auto;
 }
 
+.list-items-with-description li a {
+  text-decoration: none;
+  color: var(--color-white);
+  text-decoration: none;
+  color: var(--color-white);
+  display: flex;
+  /* padding: 8px; */
+  align-items: center;
+  gap: 10px;
+}
+
 .item-title h3 {
   font-weight: 600;
   font-size: 14px;
