--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -12,7 +12,7 @@
       <h4>Explore</h4>
       <ul>
         <li><a href="/">Book a car</a></li>
-        <li><a href="rentals/weddings">Weddings</a></li>
+        <li><a href="weddings">Weddings</a></li>
         <li><a href="trust-&-safety">Trust & Safety</a></li>
         <li><a href="trust-&-safety">How it works</a></li>
         <li><a href="how-drivefinder-works">FAQ</a></li>
