--- a/src/app/components/booking/booking.component.css
+++ b/src/app/components/booking/booking.component.css
@@ -81,3 +81,10 @@ input {
 .main_p span {
   padding-left: 2px;
 }
+
+.error-span {
+  display: flex;
+  justify-content: left;
+  align-items: flex-start;
+  flex-direction: column;
+}
