--- a/src/app/components/user-sub/user-sub.component.css
+++ b/src/app/components/user-sub/user-sub.component.css
@@ -29,6 +29,11 @@ article {
   border-radius: 7px;
 }
 
+.list-item:last-child {
+  border-top: 1px solid var(--color-black);
+  border-radius: 0;
+}
+
 .list-item:hover {
   background-color: var(--bg-color-odd);
 }
@@ -62,14 +67,12 @@ h3 {
   width: 2.3rem;
 }
 
-
 .cancel {
   position: absolute;
   right: 15px;
   top: 6px;
   cursor: pointer;
 }
-
 
 .user-img {
   background: #1cbac1;
