--- a/src/app/components/weddings/weddings.component.css
+++ b/src/app/components/weddings/weddings.component.css
@@ -17,7 +17,7 @@ button {
   padding: 11px 1.4rem;
   outline: none;
   border: 1px solid transparent;
-  background-color: var(--grey-secondary);
+  background-color: var(--lightgray);
   transition: all 0.4s ease;
 }
 
@@ -47,10 +47,10 @@ button:hover {
 }
 
 .grid-item {
-  color: var(--grey-secondary);
+  color: var(--lightgray);
   height: auto;
   width: 17rem;
-  border: 1px solid var(--grey-secondary);
+  border: 1px solid var(--lightgray);
   padding: 9px;
   border-radius: 6px;
 }
@@ -60,7 +60,7 @@ button:hover {
 }
 
 .item {
-  color: var(--grey-secondary);
+  color: var(--lightgray);
   height: auto;
   width: 17rem;
   padding: 9px;
